--- a/src/main/resources/view/log_mask.fxml
+++ b/src/main/resources/view/log_mask.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="300.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="300.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="swe2.control.loginController">
   <children>
     <HBox prefHeight="200.0" prefWidth="300.0" snapToPixel="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <children>
@@ -22,9 +22,9 @@
         </VBox>
         <VBox alignment="BASELINE_RIGHT" fillWidth="true" prefHeight="200.0" prefWidth="200.0" spacing="10.0" HBox.hgrow="ALWAYS">
           <children>
-            <TextField prefWidth="200.0" />
-            <TextField prefWidth="200.0" />
-            <Button alignment="CENTER" mnemonicParsing="false" text="Anmelden" />
+            <TextField fx:id="nameField" prefWidth="200.0" />
+            <TextField fx:id="pwdField" prefWidth="200.0" />
+            <Button fx:id="loginButton" alignment="CENTER" mnemonicParsing="false" onAction="#login" text="Anmelden" />
           </children>
           <padding>
             <Insets right="10.0" top="75.0" />
