--- a/src/main/resources/view/operator_view_delivery_reports.fxml
+++ b/src/main/resources/view/operator_view_delivery_reports.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.layout.FlowPane?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.geometry.*?>
@@ -7,23 +8,20 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="swe2.client.controller.OperatorController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="swe2.client.controller.operator.OperatorDeliveryController">
 	<children>
 		<HBox prefHeight="200.0" prefWidth="301.0" AnchorPane.bottomAnchor="-93.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="0.0">
 			<children>
 				<VBox alignment="BASELINE_LEFT" prefHeight="201.0" prefWidth="100.0" spacing="15.0">
-					<children>
-						<Label text="ID:" />
-						<Label text="Task:" />
-					</children>
 					<padding>
 						<Insets left="10.0" top="60.0" />
 					</padding>
+               <children>
+                  <ListView fx:id="listViewDelivery" prefHeight="200.0" prefWidth="200.0" />
+               </children>
 				</VBox>
 				<VBox alignment="BASELINE_RIGHT" minWidth="201.0" prefHeight="200.0" prefWidth="201.0" spacing="10.0">
 					<children>
-						<TextField fx:id="idField" disable="true" prefWidth="200.0" />
-                  <ComboBox fx:id="cBoxTask" prefWidth="200.0" />
 						<HBox id="HBox" alignment="CENTER_RIGHT" spacing="5.0">
 							<children>
 								<Label fx:id="typeLabel" text="">
@@ -33,7 +31,7 @@
 								</Label>
 							</children>
 						</HBox>
-						<Button fx:id="submitButton" onAction="#submit" mnemonicParsing="false" text="Submit">
+						<Button fx:id="backButton" mnemonicParsing="false" onAction="#back" text="Back">
 							<VBox.margin>
 								<Insets fx:id="x1" />
 							</VBox.margin>
