--- a/src/main/resources/view/operator_mask.fxml
+++ b/src/main/resources/view/operator_mask.fxml
@@ -33,7 +33,7 @@
 								</Label>
 							</children>
 						</HBox>
-						<Button fx:id="submitButton" onAction="#submit" mnemonicParsing="false" text="Submit">
+						<Button fx:id="submitButton" mnemonicParsing="false" text="Submit">
 							<VBox.margin>
 								<Insets fx:id="x1" />
 							</VBox.margin>
