Coden: Namensanpassung und Create/End Combustion beginnen (1h)

--- a/src/main/resources/view/view_delivery_reports.fxml
+++ b/src/main/resources/view/view_delivery_reports.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="swe2.client.controller.operator.OperatorDeliveryController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="swe2.client.controller.operator.ViewDeliveryController">
 	<children>
       <VBox prefHeight="200.0" prefWidth="300.0">
          <children>
