--- a/src/main/resources/view/view_waste_storage.fxml
+++ b/src/main/resources/view/view_waste_storage.fxml
@@ -11,7 +11,7 @@
 <AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity"
 	minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0"
 	prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="swe2.client.controller.operator.OperatorWasteController">
+	fx:controller="swe2.client.controller.operator.ViewWasteController">
 	 <VBox prefHeight="200.0" prefWidth="300.0">
          <children>
             <ListView fx:id="listViewWasteStorage" prefHeight="200.0" prefWidth="200.0" />
