--- a/src/main/resources/view/end_combustion.fxml
+++ b/src/main/resources/view/end_combustion.fxml
@@ -8,20 +8,27 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity"
-	minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0"
-	prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="swe2.client.controller.operator.EndCombustionController">
-	<VBox prefHeight="200.0" prefWidth="300.0">
-		<children>
-			
-			<HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0">
-				<children>
-					<Button fx:id="backButton" mnemonicParsing="false" onAction="#back"
-						text="Back" />
-				</children>
-			</HBox>
-		</children>
-	</VBox>
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="swe2.client.controller.operator.EndCombustionController">
+   <children>
+   	<VBox prefHeight="200.0" prefWidth="300.0">
+   		<children>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#endCombustionClick" text="End Combustion" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Label fx:id="lblStatus" visible="false" />
+               </children>
+            </HBox>
+   			
+   			<HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0">
+   				<children>
+   					<Button fx:id="backButton" mnemonicParsing="false" onAction="#back" text="Back" />
+   				</children>
+   			</HBox>
+   		</children>
+   	</VBox>
+   </children>
 </AnchorPane>
-
